# AsynCUDA13.Client/swagger.json
@@ -1691,6 +1691,14 @@
             }
           },
           {
+            "name": "format",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "default": "jpeg"
+            }
+          },
+          {
             "name": "chunkSize",
             "in": "query",
             "schema": {
@@ -1961,6 +1969,10 @@
             "type": "string",
             "nullable": true
           },
+          "filePath": {
+            "type": "string",
+            "nullable": true
+          },
           "mediaType": {
             "type": "string",
             "nullable": true
@@ -1993,6 +2005,14 @@
           "pointer": {
             "type": "string",
             "nullable": true
+          },
+          "chunkSize": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "overlap": {
+            "type": "number",
+            "format": "float"
           },
           "onGpu": {
             "type": "boolean",
@@ -2064,7 +2084,15 @@
             "type": "string",
             "nullable": true
           },
+          "filePath": {
+            "type": "string",
+            "nullable": true
+          },
           "mediaType": {
+            "type": "string",
+            "nullable": true
+          },
+          "meta": {
             "type": "string",
             "nullable": true
           },
@@ -2080,6 +2108,15 @@
             "type": "integer",
             "format": "int32"
           },
+          "bitDepth": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "bitsPerChannel": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
           "originalSizeMb": {
             "type": "number",
             "format": "float"
@@ -2093,10 +2130,6 @@
             "readOnly": true
           }
         },
-        "additionalProperties": false
-      },
-      "IntPtr": {
-        "type": "object",
         "additionalProperties": false
       },
       "ProblemDetails": {
@@ -2127,10 +2160,6 @@
         "additionalProperties": { }
       },
       "RuntimeCompileRequest": {
-        "required": [
-          "kernelName",
-          "kernelSource"
-        ],
         "type": "object",
         "properties": {
           "kernelName": {
@@ -2204,6 +2233,10 @@
       "RuntimeDeviceInfo": {
         "type": "object",
         "properties": {
+          "runtimeType": {
+            "type": "string",
+            "nullable": true
+          },
           "deviceId": {
             "type": "integer",
             "format": "int32",
@@ -2212,6 +2245,11 @@
           "deviceName": {
             "type": "string",
             "nullable": true
+          },
+          "deviceEntry": {
+            "type": "string",
+            "nullable": true,
+            "readOnly": true
           },
           "properties": {
             "type": "object",
@@ -2250,9 +2288,6 @@
         "additionalProperties": false
       },
       "RuntimeExecuteRequest": {
-        "required": [
-          "kernelInfo"
-        ],
         "type": "object",
         "properties": {
           "kernelInfo": {
@@ -2270,18 +2305,30 @@
           },
           "unloadAfterExecution": {
             "type": "boolean"
+          },
+          "createResultPointerAssetReference": {
+            "type": "boolean"
+          },
+          "pointerArguments": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true,
+            "readOnly": true
           }
         },
         "additionalProperties": false
       },
       "RuntimeExecuteResponse": {
-        "required": [
-          "kernelInfo"
-        ],
         "type": "object",
         "properties": {
-          "resultPointer": {
-            "$ref": "#/components/schemas/IntPtr"
+          "resultPointers": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
           },
           "success": {
             "type": "boolean"
@@ -2414,6 +2461,12 @@
               "type": "string"
             },
             "nullable": true
+          },
+          "argumentsCount": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true,
+            "readOnly": true
           }
         },
         "additionalProperties": false
@@ -2423,6 +2476,23 @@
         "properties": {
           "id": {
             "type": "string",
+            "nullable": true
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "assetReferenceIds": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "nullable": true
+          },
+          "assetReferenceId": {
+            "type": "string",
+            "format": "uuid",
             "nullable": true
           },
           "indexPointer": {
@@ -2502,14 +2572,14 @@
           },
           "freeAfterPull": {
             "type": "boolean"
+          },
+          "ensureReferencedAssetsUpdatedOrCreated": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
       },
       "RuntimePullResponse": {
-        "required": [
-          "memoryInfoReference"
-        ],
         "type": "object",
         "properties": {
           "memoryInfoReference": {
@@ -2529,11 +2599,20 @@
         "additionalProperties": false
       },
       "RuntimePushRequest": {
-        "required": [
-          "payload"
-        ],
         "type": "object",
         "properties": {
+          "assetId": {
+            "type": "string",
+            "format": "uuid",
+            "nullable": true
+          },
+          "keepData": {
+            "type": "boolean"
+          },
+          "_elementType": {
+            "type": "string",
+            "nullable": true
+          },
           "elementType": {
             "type": "string",
             "nullable": true,
@@ -2541,6 +2620,18 @@
           },
           "payload": {
             "$ref": "#/components/schemas/ISimdPayload"
+          },
+          "indexLength": {
+            "type": "string",
+            "nullable": true
+          },
+          "stride": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "overlap": {
+            "type": "number",
+            "format": "float"
           },
           "asyncCall": {
             "type": "boolean"
